--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ main {
 
 
 .thick {
-    height: 2rem;
+    height: 1.7rem;
     width: 13rem;
     background-color: black;
     margin: auto;
@@ -67,10 +67,11 @@ main {
 }
 
 .card {
-    font-weight: 800;
+    font-weight: 900;
     margin-top: 1rem;
     display: flex;
     width: 22rem;
+    font-size: larger;
     justify-content: center;
     position: absolute;
     color: #ffffff;
